# g-ranche

./: .gitignore  CLAUDE.md  Caddyfile  Caddyfile.fly  Dockerfile.fly  backup.sh  docker-compose.yml  fly.toml  start-fly.sh  start.sh
.claude/commands/: sync-docs.md
backend/: .dockerignore  Dockerfile  auth.py  database.py  main.py  migrate_pseudonym.py  pseudonym.py  pyproject.toml  seed.py
backend/ai/: __init__.py  client.py  system_prompt.py  tool_executor.py  tools.py
backend/models/: __init__.py  ai_conversation.py  case_record.py  client.py  monthly_task.py  schedule.py  staff.py  support_plan.py  user.py
backend/routers/: __init__.py  ai.py  auth.py  case_records.py  clients.py  monthly_tasks.py  schedules.py  support_plans.py  transcription.py
backend/schemas/: __init__.py  ai_conversation.py  case_record.py  client.py  monthly_task.py  schedule.py  staff.py  support_plan.py  transcription.py
backend/templates/: (者）★原本.xlsx
backend/transcription/: cell_mappings.py  dump_template.py  excel_writer.py  ocr.py
docs/: 00_index.md  01_architecture.md  02_backend_guide.md  03_frontend_guide.md  04_ai_guide.md  05_known_issues.md  06_git_guide.md  07_security_decisions.md  08_performance_optimization.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/contexts/: AuthContext.tsx  PseudonymContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAIStream.ts  useAutoLock.ts  useClients.ts  useFeatureFlags.ts  useRecords.ts  useSchedules.ts
(+39 files in other folders)
