[project]
name = "g-ranche-backend"
version = "0.1.0"
description = "ぐ・らんちぇ 管理システム Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.34.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.0",
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
